--- a/pug/provinsi/section_profil_penerima.pug
+++ b/pug/provinsi/section_profil_penerima.pug
@@ -16,21 +16,21 @@ section.section-course.py-3.py-lg-5
                         p.mb-0 Mencakup seluruh wilayah kabupaten/kota, dan kecamatan di Provinsi <b class="province-name"></b>.
 
             .col-lg-6.mb-4
-                .border.p-3.w-100.rounded
+                .border.p-3.w-100.rounded-3
                     h5.mb-3 Jenis Kelamin
                     //- Chart jenis kelamin
                     div#gender(style="height:300px")
                     //- span.skeleton-box.w-100.rounded(style="height:300px")
 
             .col-lg-6
-                .border.p-3.w-100.rounded
+                .border.p-3.w-100.rounded-3
                     h5.mb-3 Umur
                     //- Chart Umur
                     div#age(style="height:300px")
                         //- span.skeleton-box.w-100.rounded(style="height:300px")
 
             .col-lg-6
-                .border.p-3.w-100.rounded
+                .border.p-3.w-100.rounded-3
                     h5.mb-3 Pendidikan Terakhir
                     //- Chart Pendidikan Terakhir
                     div#lastEdu(style="height:300px")
