--- a/pug/home/section_kategori_pelatihan.pug
+++ b/pug/home/section_kategori_pelatihan.pug
@@ -4,9 +4,8 @@ section.section-course.py-3.py-lg-5
             .col-12
                 h5.mb-4.text-center Moda Pelatihan
             .col-lg-6.mb-4
-                //- .border.rounded-3.p-3
-                //- Chart total jumlah //
-                #course-preference(style="height:300px")
+                .border.rounded-3.p-3
+                    #course-preference(style="height:300px")
 
             .col-lg-6.mb-4 
                 .row#course-preference-numbers
