--- a/pug/home/section_maps.pug
+++ b/pug/home/section_maps.pug
@@ -4,4 +4,7 @@ section.section-hero
         span Prakerja 
         | 2020 - 2024
     #maps-indonesia.container-fluid
-    span.scroll-hint Scroll
+    //- span.scroll-hint
+    //-     i.bi.bi-arrow-left
+    .mouse 
+        .scoll
