update hint scroll

--- a/pug/home/section_maps.pug
+++ b/pug/home/section_maps.pug
@@ -4,7 +4,8 @@ section.section-hero
         span Prakerja 
         | 2020 - 2024
     #maps-indonesia.container-fluid
-    //- span.scroll-hint
-    //-     i.bi.bi-arrow-left
-    .mouse 
-        .scoll
+    span.scroll-hint
+        i.bi.bi-arrow-left 
+        span.fs-7.ms-2 Scroll
+    //- .mouse 
+    //-     .scoll
