update mobile view page kabupaten / kota

--- a/pug/kabupaten/section_content_hero.pug
+++ b/pug/kabupaten/section_content_hero.pug
@@ -1,6 +1,9 @@
 section.section-course
     .container 
-        .row.d-flex.flex-row-reverse
+        .row.d-flex.flex-reverse
+            .col-lg-8.bg-s100.p-4(style="min-height:420px") 
+                #maps-regency
+                
             .col-lg-4.bg-s200.p-4
                 div
                     .regency-name.h6 Kabupaten
@@ -43,7 +46,6 @@ section.section-course
                     span.city-name.text-capitalize 0 
                     |  pernah mengikuti pelatihan di Prakerja. Angka jumlah Angkatan Kerja diambil menurut data BPS per Februari 2024.
 
-            .col-lg-8.bg-s100.p-4(style="min-height:420px") 
-                #maps-regency
+            
 
             
