update support for responive mobile map

--- a/pug/home/section_profil_penerima.pug
+++ b/pug/home/section_profil_penerima.pug
@@ -22,14 +22,14 @@ section.section-course.py-3.py-lg-5
                     div#gender(style="height:300px")
                     //- span.skeleton-box.w-100.rounded(style="height:300px")
 
-            .col-lg-6
+            .col-lg-6.mb-4
                 .border.p-3.w-100.rounded-3
                     h5.mb-3 Umur
                     //- Chart Umur
                     div#age(style="height:300px")
                         //- span.skeleton-box.w-100.rounded(style="height:300px")
 
-            .col-lg-6
+            .col-lg-6.mb-4
                 .border.p-3.w-100.rounded-3
                     h5.mb-3 Pendidikan Terakhir
                     //- Chart Pendidikan Terakhir
