update view for mobile preview

--- a/pug/provinsi/section_content_hero.pug
+++ b/pug/provinsi/section_content_hero.pug
@@ -1,7 +1,7 @@
 section.section-course
     .container 
         .row.d-flex.flex-reverse
-            .col-12.col-lg-8.bg-s100.p-4(style="min-height:320px") 
+            .col-12.col-lg-8.bg-s100.p-4.map-province(style="min-height:320px") 
                 #maps-province
             .col-12.col-lg-4.bg-s200.p-4
                 div
