update improvement for statistik and incentive, make the map specific to regency

--- a/pug/home/section_insentif.pug
+++ b/pug/home/section_insentif.pug
@@ -1,7 +1,7 @@
-section.section-course.py-3.py-lg-5
+section.section-course.py-3
     .container.px-4.px-md-0
         .row.text-center
-            h4.mb-4 Insentif
+            //- h4.mb-4 Insentif
 
             .col-lg-12.mb-4
                 h5 Rekening Penerimaan Insentif
