--- a/pug/home/section_kategori_pelatihan.pug
+++ b/pug/home/section_kategori_pelatihan.pug
@@ -42,10 +42,10 @@ section.section-course.py-3.py-lg-5
     .container.px-4.px-md-0
         .row
             .col-lg-12.mb-4
-                h5.mb-3.text-center Kategori Pelatihan Terbanyak
-                div#course-category(style="height:600px")
+                h5.mb-3.text-center Jumlah Peserta Per Kategori Pelatihan
+                div#course-category(style="height:1000px")
                 //- span.skeleton-box.w-100.rounded(style="height:300px")
 
-            .col-lg-12.mb-4
+            //- .col-lg-12.mb-4
                 h5.mb-4.text-center 10 Kategori Pilihan Paling Diminati
                 #course-category-list.row
