--- a/pug/kabupaten/section_content_hero.pug
+++ b/pug/kabupaten/section_content_hero.pug
@@ -12,8 +12,8 @@ section.section-course
 
                 hr
 
-                p.text-secondary 
-                    i / fun fact /
+                //- p.text-secondary 
+                //-     i / fun fact /
 
                 .d-flex
                     .outer-funfact.w-100
