--- a/pug/kabupaten/section_table_pesebaran_penerima_kabupaten.pug
+++ b/pug/kabupaten/section_table_pesebaran_penerima_kabupaten.pug
@@ -2,7 +2,7 @@ section.section-course.py-4.pt-lg-5
     .container.px-4.px-md-0
         .row.text-center
             h4.custom-rfs-h4 Persebaran Penerima
-            p Data berasal dari seluruh Indonesia tahun 2020-2024 dengan skema Semi Bansos dan Skema Normal (Gelombang 1-69).
+            p Data berasal dari seluruh Indonesia tahun 2020-2024 dengan skema Semi Bansos dan Skema Normal.
             .overflow-x-scroll
                 table#tablePersebaran.table.table-hover.fs-7.my-4.display.dataTable.table-mobile-xxs
                     thead
