--- a/pug/provinsi/section_content_hero.pug
+++ b/pug/provinsi/section_content_hero.pug
@@ -11,7 +11,7 @@ section.section-course
 
                 hr
 
-                p.text-secondary 
+                //- p.text-secondary 
                     i / fun fact /
 
                 .d-flex.mb-3
@@ -26,9 +26,9 @@ section.section-course
                     
                     .outer-funfact.ms-auto.w-100
                         .d-inline-flex
-                            i.bi.bi-activity.fs-2.align-self-center
+                            i.bi.bi-people.fs-2.align-self-center
                             b#percent-recipient.ms-2.h4.mb-0.align-self-center
-                            b.h4.align-self-center  %
+                            b.h4.align-self-center %
                             //- b#age-productive.ms-2.h4.mb-0.align-self-center ~ 
                         .d-flex
                             span.text-secondary.fs-7 Penerima Prakerja
@@ -38,12 +38,12 @@ section.section-course
                 //- p.fs-7.mt-2.narasi Berdasarkan data BPS (Feb 2024), sebanyak <span id="total-recipient">0</span> Orang atau setara <span id="percent-recipient">0.0</span>% dari <span id="total-workers">0</span> Jumlah Angkatan Kerja yang Pernah Mengikuti Pelatihan di Prakerja.
                 p.fs-7.mt-3.narasi 
                     | Sebanyak 
-                    span#total-recipient 0 
+                    span#total-recipient.fw-bold 0 
                     |  orang dari 
-                    span#total-workers 0 
+                    span#total-workers.fw-bold 0 
                     |  angkatan kerja di Provinsi 
-                    span#province-name 0 
-                    |  pernah mengikuti pelatihan di Prakerja. Angka jumlah Angkatan Kerja diambil menurut data BPS per Februari 2024.
+                    span#province-name.fw-bold 0 
+                    |  pernah mengikuti pelatihan di Prakerja. Angka jumlah Angkatan Kerja diambil menurut data <i>BPS per Februari 2024</i>.
 
                 //- .d-flex.mb-3
                 //-     .outer-funfact
