--- a/css/scss/scss-custom/_header.scss
+++ b/css/scss/scss-custom/_header.scss
@@ -7,6 +7,19 @@
     z-index: 234;
     transition: 0.3s background-color;
 }
+.header-heading{
+  position:absolute; 
+  top:8px; 
+  left:0; 
+  right:0; 
+  margin-left:auto;
+  margin-right:auto;
+  text-align:center;
+  z-index:0;
+  opacity: 0;
+  font-family: 'Poppins', sans-serif;
+  // outline: solid 1px red;
+}
 
 .header-fixed{
     position: fixed;
@@ -16,6 +29,9 @@
     left: 0;
     box-shadow: 0px 0px 0px 1px rgba(214, 219, 224, 0.2), 0px 8px 16px -8px rgba(1, 24, 48, 0.2);
     transition: 0.3s background-color;
+    .header-heading{
+      opacity: 1;
+    }
 }
 
 .md-hide{
@@ -29,6 +45,7 @@
 .max-width-200{
   max-width: 100%;
 }
+
 
 
 
