--- a/pug/includes/navigation.pug
+++ b/pug/includes/navigation.pug
@@ -5,8 +5,12 @@ header.pdt-header
   .container-md.px-4.px-md-0
     .d-flex.justify-content-between.align-items-center.position-relative
       div.d-flex.justify-content-between.align-items-center.col-12.col-lg-auto
-        a(href=baseURL+'index.html')
+        a(href=baseURL+'index.html', style="position:relative;z-index:11")
           img(src=baseURL+'img/logo-prakerja.svg' width='' alt='Prakerja')
+      div.header-heading.fs-4.d-none.d-xl-block
+        | Statistik Penerima 
+        span.text-primary Prakerja 
+        | 2020 - 2024
       ul.d-flex.align-items-center.navbar-custom
         li.nav-item.md-show
           .menu.burger-menu(data-menu='13')
