--- a/pug/home/section_maps.pug
+++ b/pug/home/section_maps.pug
@@ -3,7 +3,7 @@ section.section-hero
         | Statistik Penerima 
         span Prakerja 
         | 2020 - 2024
-    #maps-indonesia.container-fluid
+    #maps-indonesia(title="Arahkan kursor diluar area peta untuk scroll")
     span.scroll-hint
         i.bi.bi-arrow-left 
         span.fs-7.ms-2 Scroll
