--- a/pug/kabupaten/section_profil_penerima.pug
+++ b/pug/kabupaten/section_profil_penerima.pug
@@ -5,7 +5,7 @@ section.section-course.py-3.py-lg-5
 
             .col-lg-6.d-flex.flex-column
                 .border.p-4.d-flex.rounded-3.gap-3.mb-4.h-100.align-items-center
-                    img(src="img/img-people.svg", alt="")
+                    img(src="../img/img-people.svg", alt="")
                     div.text-start
                         h6#total-penerima.h1.text-primary 18.887.737
                         p.mb-0 Total Penerima Aktif Program
