update title meta and description

--- a/kabupaten/index.pug
+++ b/kabupaten/index.pug
@@ -3,7 +3,7 @@
 - var pageActive = ''
 - var baseURL = '../'
 - var contentDescription = {}
-- contentDescription.title = "Kabupaten - prakerja.go.id"
+- contentDescription.title = "Statistik Program Prakerja di Kabupaten - prakerja.go.id"
 - contentDescription.description = "Informasi statistik penerima prakerja selama periode 2020 - 2024."
 - contentDescription.ogImage = "https://raw.githubusercontent.com/Kartu-Prakerja/laporan-penerima/main/img/img-cover-statistik-prakerja.png"
 
