update fun fact wording

--- a/pug/home/section_kategori_pelatihan.pug
+++ b/pug/home/section_kategori_pelatihan.pug
@@ -2,7 +2,7 @@ section.section-course.py-3.py-lg-5
     .container.px-4.px-md-0
         .row
             .col-12
-                h5.mb-4.text-center Moda Pelatihan
+                h5.mb-4.text-center Jumlah Pelatihan Berdasarkan Moda Yang Dipilih Penerima
             .col-lg-6.mb-4
                 .border.rounded-3.p-3
                     #course-preference(style="height:300px")
