update improvement content and text

--- a/pug/home/section_insentif.pug
+++ b/pug/home/section_insentif.pug
@@ -1,4 +1,4 @@
-section.section-course.py-3
+section.section-course.pt-3.mb-5
     .container.px-4.px-md-0
         .row.text-center
             //- h4.mb-4 Insentif
