--- a/pug/home/section_table_persebaran_penerima.pug
+++ b/pug/home/section_table_persebaran_penerima.pug
@@ -184,5 +184,7 @@ section.section-course.py-4.pt-lg-5
                         //-     td(style="background:rgba(42, 114, 199, 0)") 9
                         //-     td(style="background:rgba(42, 114, 199, 0)") 10
                         //-     td(style="background:rgba(42, 114, 199, 0)") 11
-
+                p.text-end.text-secondary
+                    i.fw-bold * Aktif 
+                    span merupakan Penerima yang setidaknya beli minimal 1 pelatihan.
                     
