--- a/pug/kabupaten/section_table_pesebaran_penerima_kabupaten.pug
+++ b/pug/kabupaten/section_table_pesebaran_penerima_kabupaten.pug
@@ -31,3 +31,6 @@ section.section-course.py-4.pt-lg-5
                             td Aktif  
 
                         tbody(rowspan="1" colspan="11")
+                p.text-end.text-secondary
+                    i.fw-bold * Aktif 
+                    span merupakan Penerima yang setidaknya beli minimal 1 pelatihan.
