--- a/pug/provinsi/section_table_pesebaran_penerima_kota.pug
+++ b/pug/provinsi/section_table_pesebaran_penerima_kota.pug
@@ -1,4 +1,4 @@
-section.section-course.py-4.pt-lg-5
+section.section-course.py-4.pt-lg-4
     .container.px-4.px-md-0
         .row.text-center
             h4.custom-rfs-h4 Persebaran Penerima
@@ -31,3 +31,6 @@ section.section-course.py-4.pt-lg-5
                             td Aktif  
 
                         tbody(rowspan="1" colspan="11")
+                p.text-end.text-secondary
+                    i.fw-bold * Aktif 
+                    span merupakan Penerima yang setidaknya beli minimal 1 pelatihan.
