--- a/pug/home/section_inklusivitas.pug
+++ b/pug/home/section_inklusivitas.pug
@@ -9,12 +9,12 @@ section.section-course.py-3.py-lg-5
             .col-lg-3.img-desil.d-flex.align-items-end.p-3.text-start
                 div
                     h4.display-4.text-white.desil -%
-                    h5.text-white Purna Desil 1
+                    h5.text-white Desil 1
             .col-lg-3.img-difabel.d-flex.align-items-end.p-3.text-start
                 div
                     h4.display-4.text-white.difabel -%
-                    h5.text-white Purna Difabel
+                    h5.text-white Difabel
             .col-lg-3.img-perdesaan.d-flex.align-items-end.p-3.text-start
                 div
                     h4.display-4.text-white.vilage -%
-                    h5.text-white Purna Perdesaan
+                    h5.text-white Perdesaan
