update variable root path and update total sk vs total aktif

--- a/pug/provinsi/section_profil_penerima.pug
+++ b/pug/provinsi/section_profil_penerima.pug
@@ -6,9 +6,12 @@ section.section-course.py-3.py-lg-5
             .col-lg-6.d-flex.flex-column
                 .border.p-4.d-flex.rounded-3.gap-3.mb-4.h-100.align-items-center
                     img(src="../img/img-people.svg", alt="")
+                    div.text-start.border-end.pe-4.me-4
+                        h6#total-penerima-sk.h1.text-primary 0
+                        p.mb-0 Total <b>SK Penetapan</b> Program
                     div.text-start
-                        h6#total-penerima.h1.text-primary 18.887.737
-                        p.mb-0 Total Penerima Aktif Program
+                        h6#total-penerima.h1.text-primary 0
+                        p.mb-0 Total <b>Penerima Aktif</b> Program
 
                 .border.p-4.d-flex.rounded-3.mb-4.bg-map-indonesia.h-100.align-items-center
                     div.text-start
