update layout profil penerima

--- a/css/scss/pds-penerima.scss
+++ b/css/scss/pds-penerima.scss
@@ -960,6 +960,9 @@ tbody {
 .text-primary {
   color: var(--primary) !important;
 }
+.text-orange {
+  color: var(--secondary) !important;
+}
 
 .link-primary {
   color: var(--primary) !important;
