--- a/pug/kabupaten/section_profil_penerima.pug
+++ b/pug/kabupaten/section_profil_penerima.pug
@@ -3,15 +3,30 @@ section.section-course.py-3.py-lg-4
         .row.text-center
             h4.mb-4.custom-rfs-h4 Profil Penerima
 
-            .col-lg-6.d-flex.flex-column
-                .border.p-4.d-flex.rounded-3.gap-3.mb-4.h-100.align-items-center
-                    img(src="../img/img-people.svg", alt="")
-                    div.text-start.border-end.pe-4.me-4
-                        h6#total-penerima-sk.h1.text-primary 0
-                        p.mb-0 Total <b>SK Penetapan</b> Program
-                    div.text-start
-                        h6#total-penerima.h1.text-primary 0
-                        p.mb-0 Total <b>Penerima Aktif</b> Program
+            //- .col-lg-6.d-flex.flex-column
+                //- .border.p-4.d-flex.rounded-3.gap-3.mb-4.h-100.align-items-center
+                //-     img(src="../img/img-people.svg", alt="")
+                //-     div.text-start.border-end.pe-4.me-4
+                //-         h6#total-penerima-sk.h1.text-primary 0
+                //-         p.mb-0 Total <b>SK Penetapan</b> Program
+                //-     div.text-start
+                //-         h6#total-penerima.h1.text-primary 0
+                //-         p.mb-0 Total <b>Penerima Aktif</b> Program
+
+            .col-xl-6.d-flex.flex-column
+                .border.p-4.d-md-flex.rounded-3.gap-4.mb-4.h-100.align-items-center
+                    div.text-start.w-100
+                        img.mb-2(src="../img/img-people.svg", alt="" height="48")
+                        div
+                            h6#total-penerima-sk.h1.text-primary.mb-0 0
+                            p.mb-0 Total <b>SK Penetapan</b> Program
+                    div.border-end.h-100.d-none.d-md-block
+                    div.border-top.w-100.d-block.d-md-none.my-3
+                    div.text-start.w-100
+                        img.mb-2(src="../img/img-people2.svg", alt="" height="48")
+                        div
+                            h6#total-penerima.h1.text-orange.mb-0 0
+                            p.mb-0 Total <b>Penerima Aktif</b> Program
 
                 .border.p-4.d-flex.rounded-3.mb-4.bg-map-indonesia.h-100.align-items-center
                     div.text-start
