--- a/pug/includes/html_head.pug
+++ b/pug/includes/html_head.pug
@@ -5,8 +5,8 @@ head
     link(href="https://www.prakerja.go.id/favicon.ico" rel="shortcut icon")
     title #{contentDescription.title}
     meta(name="description" content=contentDescription.description)
-    link(rel='canonical' href='https://statistik-penerima.prakerja.go.id')
-    link(rel='alternate' hreflang='id' href='https://statistik-penerima.prakerja.go.id')
+    link(rel='canonical' href='https://statistik.prakerja.go.id')
+    link(rel='alternate' hreflang='id' href='https://statistik.prakerja.go.id')
     meta(property="og:image" content=contentDescription.ogImage)
     meta(property="og:image:width" content="400")
     meta(property="og:image:height" content="627")
