--- a/pug/kabupaten/section_profil_penerima.pug
+++ b/pug/kabupaten/section_profil_penerima.pug
@@ -31,7 +31,7 @@ section.section-course.py-3.py-lg-4
                 .border.p-4.d-flex.rounded-3.mb-4.bg-map-indonesia.h-100.align-items-center
                     div.text-start
                         h6.h1.text-primary 100%
-                        p.mb-0 Mencakup seluruh wilayah kecamatan di Kabupaten/Kota <b class="province-name"></b>.
+                        p.mb-0 Mencakup seluruh wilayah kecamatan di <b class="province-name text-capitalize"></b>.
 
             .col-lg-6.mb-4
                 .border.p-3.w-100.rounded-3
