--- a/kabupaten/index.pug
+++ b/kabupaten/index.pug
@@ -21,6 +21,9 @@ html(lang="id" translate="no" page-class="home")
             include ../pug/kabupaten/section_profil_penerima.pug
             include ../pug/home/section_kategori_pelatihan.pug
             include ../pug/home/section_insentif.pug
+            
+            //- add Kisah Para Alumni 
+            //- include ../pug/kabupaten/section_story.pug
 
         include ../pug/includes/footer.pug
     include ../pug/includes/html_foot.pug
