--- a/pug/includes/html_foot.pug
+++ b/pug/includes/html_foot.pug
@@ -7,6 +7,7 @@ script(src="https://cdn.datatables.net/2.1.4/js/dataTables.bootstrap5.js")
 script(src=baseURL+"js/lib/owl.carousel.min.js")
 script(src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.5.0/echarts.min.js" referrerpolicy="no-referrer") 
 script(src="https://cdn.jsdelivr.net/npm/@tarekraafat/autocomplete.js@10.2.7/dist/autoComplete.min.js")
+script(src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async)
 //- script(src="https://cdn.datatables.net/v/bs5/dt-2.1.3/af-2.7.0/b-3.1.1/fc-5.0.1/fh-4.0.1/r-3.0.2/datatables.min.js")
 //- script(src=baseURL+"js/lib/echarts.min.js")
 
