--- a/pug/kabupaten/section_story.pug
+++ b/pug/kabupaten/section_story.pug
@@ -157,6 +157,39 @@ section.section-testimony.py-3.py-lg-5
                         p Kini, Hemi 
                             b #JadiBisa 
                             | percaya diri dengan memiliki 4 profesi sekaligus yaitu dosen, petani sawit, fotografer dan penerjemah bahasa mandarin.
+            
+            .col-lg-4.col-md-6.mb-4
+                .testimony-card.p-3.rounded-3.bg-white
+                    .testimony-header.d-flex.justify-content-between.align-items-center
+                    
+                        div.d-flex.align-items-center 
+                            div.pe-2 
+                                .testimony-img
+                                    //- img(src="img/img-testimony-sabrina.webp", alt="Sabrina Lutfiani")
+                                    div.testimony-initial.d-flex.align-items-center.h-100.skeleton-box
+                                        span.w-100.text-center.fs-5.color-primary 
+                                
+                            div 
+                                h6.m-0.skeleton-box.rounded-pill(style='width:180px;height: 18px;')
+                                div.fs-7.text-secondary.skeleton-box.rounded-pill(style='width:200px;height: 12px;')
+                                div.fs-7.text-secondary.skeleton-box.rounded-pill(style='width:150px;height: 12px;')
+
+                        span.fs-1
+                            i.bi.bi-quote
+
+                    .testimony-body.mt-3 
+                        p.skeleton-box.rounded-pill.mb-1(style='width:100%;height: 12px;')
+                        p.skeleton-box.rounded-pill.mb-1(style='width:90%;height: 12px;')
+                        p.skeleton-box.rounded-pill(style='width:60%;height: 12px;')
+
+                        p.skeleton-box.rounded-pill.mb-1(style='width:100%;height: 12px;')
+                        p.skeleton-box.rounded-pill.mb-1(style='width:90%;height: 12px;')
+                        p.skeleton-box.rounded-pill(style='width:60%;height: 12px;')
+
+                        p.skeleton-box.rounded-pill.mb-1(style='width:100%;height: 12px;')
+                        p.skeleton-box.rounded-pill.mb-1(style='width:90%;height: 12px;')
+                        p.skeleton-box.rounded-pill(style='width:60%;height: 12px;')
+
 
         .row.d-flex.justify-content-center
             button.btn.btn-outline-primary.btn-lg.w-auto Lihat Lebih Banyak
