--- a/kabupaten/index.pug
+++ b/kabupaten/index.pug
@@ -23,7 +23,7 @@ html(lang="id" translate="no" page-class="home")
             include ../pug/home/section_insentif.pug
             
             //- add Kisah Para Alumni 
-            //- include ../pug/kabupaten/section_story.pug
+            include ../pug/kabupaten/section_story.pug
 
         include ../pug/includes/footer.pug
     include ../pug/includes/html_foot.pug
