update information about the beneficieries list with masonry

--- a/provinsi/index.pug
+++ b/provinsi/index.pug
@@ -26,5 +26,8 @@ html(lang="id" translate="no" page-class="home")
             //- include ../pug/provinsi/section_profil_penerima.pug
             //- include ../pug/home/section_inklusivitas.pug
 
+            //- add Kisah Para Alumni 
+            include ../pug/kabupaten/section_story.pug
+
         include ../pug/includes/footer.pug
     include ../pug/includes/html_foot.pug
