--- a/pug/kabupaten/section_story.pug
+++ b/pug/kabupaten/section_story.pug
@@ -1,8 +1,8 @@
 section.section-testimony.py-3.py-lg-5
     .container
         h4.mb-4.custom-rfs-h4.text-center Kisah Para Alumni
-        .row(data-masonry='{"percentPosition": true }')
-            .col-lg-4.col-md-6.mb-4
+        #data-story.row
+            .col-lg-4.col-md-6.mb-4.list-story
                 .testimony-card.p-3.rounded-3.bg-white
                     .testimony-header.d-flex.justify-content-between.align-items-center
                     
@@ -10,51 +10,29 @@ section.section-testimony.py-3.py-lg-5
                             div.pe-2 
                                 .testimony-img
                                     //- img(src="img/img-testimony-sabrina.webp", alt="Sabrina Lutfiani")
-                                    div.testimony-initial.d-flex.align-items-center.h-100
-                                        span.w-100.text-center.fs-5.color-primary Y
+                                    div.testimony-initial.d-flex.align-items-center.h-100.skeleton-box
+                                        span.w-100.text-center.fs-5.color-primary 
                                 
                             div 
-                                h6.m-0 Yoki Putriana
-                                div.fs-7.text-secondary Desa Sukamuncul, Kec. Sukamaju
-                                div.fs-7.text-secondary Gelombang 50 - 2023
-
-                        span.fs-1
-                            i.bi.bi-quote
-
-                    .testimony-body.mt-3
-                        p Sebelumnya Yoki hanyalah ibu rumah tangga yang tidak memiliki penghasilan.
-                        p Dalam pelatihan di Prakerja, Yoki belajar tentang penggunaan rumus dasar, pembuatan tabel, dan analisis data, yang sangat penting untuk pengelolaan keuangan koperasi. Keterampilan ini juga memungkinkannya menjadi Mitra BPS dalam berbagai pekerjaan yang membutuhkan kemampuan komputer. Selain itu, kemampuan bahasa Inggrisnya semakin lancar, terutama saat bertemu dengan WNA, dan membuka peluang usaha baru.
-                        p Kini, Yoki 
-                            b #JadiBisa 
-                            | lebih produktif dan berpenghasilan.
-
-
-            .col-lg-4.col-md-6.mb-4
-                .testimony-card.p-3.rounded-3.bg-white
-                    .testimony-header.d-flex.justify-content-between.align-items-center
-                    
-                        div.d-flex.align-items-center 
-                            div.pe-2 
-                                .testimony-img
-                                    img(src="../img/alumni-amiruddin.webp", alt="Amiruddin")
-                                    //- div.testimony-initial.d-flex.align-items-center.h-100
-                                    //-     span.w-100.text-center.fs-5.color-primary A
-                                
-                            div 
-                                h6.m-0 Amiruddin
-                                div.fs-7.text-secondary Desa Sukamuncul, Kec. Sukamaju
-                                div.fs-7.text-secondary Gelombang 50 - 2023
+                                h6.m-0.skeleton-box.rounded-pill(style='width:180px;height: 18px;')
+                                div.fs-7.text-secondary.skeleton-box.rounded-pill(style='width:200px;height: 12px;')
+                                div.fs-7.text-secondary.skeleton-box.rounded-pill(style='width:150px;height: 12px;')
 
                         span.fs-1
                             i.bi.bi-quote
 
                     .testimony-body.mt-3 
-                        p Amiruddin memiliki usaha di bidang kuliner khas Aceh.
-                        p Di Prakerja, ia mempelajari bagaimana cara memotret makanan. Selain itu, ia juga mempelajari berbagai olahan makanan.
-                        p Sejak itu, minatnya terhadap kuliner semakin berkembang. Amiruddin 
-                            b #JadiBisa 
-                            | membagikan ilmu tersebut ke istri, yang sekarang menjalankan usaha gorengan. Keahlian mengambil gambar juga ia gunakan untuk memotret makanan dan memasarkan melalui media sosial.
-            
+                        p.skeleton-box.rounded-pill.mb-1(style='width:100%;height: 12px;')
+                        p.skeleton-box.rounded-pill.mb-1(style='width:90%;height: 12px;')
+                        p.skeleton-box.rounded-pill(style='width:60%;height: 12px;')
+
+                        p.skeleton-box.rounded-pill.mb-1(style='width:100%;height: 12px;')
+                        p.skeleton-box.rounded-pill.mb-1(style='width:90%;height: 12px;')
+                        p.skeleton-box.rounded-pill(style='width:60%;height: 12px;')
+
+                        p.skeleton-box.rounded-pill.mb-1(style='width:100%;height: 12px;')
+                        p.skeleton-box.rounded-pill.mb-1(style='width:90%;height: 12px;')
+                        p.skeleton-box.rounded-pill(style='width:60%;height: 12px;')
 
             .col-lg-4.col-md-6.mb-4
                 .testimony-card.p-3.rounded-3.bg-white
@@ -64,100 +42,30 @@ section.section-testimony.py-3.py-lg-5
                             div.pe-2 
                                 .testimony-img
                                     //- img(src="img/img-testimony-sabrina.webp", alt="Sabrina Lutfiani")
-                                    div.testimony-initial.d-flex.align-items-center.h-100
-                                        span.w-100.text-center.fs-5.color-primary Y
+                                    div.testimony-initial.d-flex.align-items-center.h-100.skeleton-box
+                                        span.w-100.text-center.fs-5.color-primary 
                                 
                             div 
-                                h6.m-0 Yusmarni
-                                div.fs-7.text-secondary Desa Sukamuncul, Kec. Sukamaju
-                                div.fs-7.text-secondary Gelombang 50 - 2023
+                                h6.m-0.skeleton-box.rounded-pill(style='width:180px;height: 18px;')
+                                div.fs-7.text-secondary.skeleton-box.rounded-pill(style='width:200px;height: 12px;')
+                                div.fs-7.text-secondary.skeleton-box.rounded-pill(style='width:150px;height: 12px;')
 
                         span.fs-1
                             i.bi.bi-quote
 
                     .testimony-body.mt-3 
-                        p Yusmarni bekerja sebagai tenaga kesehatan di salah satu klinik di Aceh.
-                        p Di Prakerja, ia mempelajari bagaimana cara memotret produk dan bagaimana strategi pemasaran produk secara online.
-                        p Kini, Yusmarni 
-                            b #JadiBisa 
-                            | memiliki penghasilan tambahan dari jualan online.
+                        p.skeleton-box.rounded-pill.mb-1(style='width:100%;height: 12px;')
+                        p.skeleton-box.rounded-pill.mb-1(style='width:90%;height: 12px;')
+                        p.skeleton-box.rounded-pill(style='width:60%;height: 12px;')
 
-            .col-lg-4.col-md-6.mb-4
-                .testimony-card.p-3.rounded-3.bg-white
-                    .testimony-header.d-flex.justify-content-between.align-items-center
-                    
-                        div.d-flex.align-items-center 
-                            div.pe-2 
-                                .testimony-img
-                                    //- img(src="img/img-testimony-sabrina.webp", alt="Sabrina Lutfiani")
-                                    div.testimony-initial.d-flex.align-items-center.h-100
-                                        span.w-100.text-center.fs-5.color-primary Y
-                                
-                            div 
-                                h6.m-0 Yusmarni
-                                div.fs-7.text-secondary Desa Sukamuncul, Kec. Sukamaju
-                                div.fs-7.text-secondary Gelombang 50 - 2023
+                        p.skeleton-box.rounded-pill.mb-1(style='width:100%;height: 12px;')
+                        p.skeleton-box.rounded-pill.mb-1(style='width:90%;height: 12px;')
+                        p.skeleton-box.rounded-pill(style='width:60%;height: 12px;')
 
-                        span.fs-1
-                            i.bi.bi-quote
+                        p.skeleton-box.rounded-pill.mb-1(style='width:100%;height: 12px;')
+                        p.skeleton-box.rounded-pill.mb-1(style='width:90%;height: 12px;')
+                        p.skeleton-box.rounded-pill(style='width:60%;height: 12px;')
 
-                    .testimony-body.mt-3 
-                        p Yusmarni bekerja sebagai tenaga kesehatan di salah satu klinik di Aceh.
-                        p Di Prakerja, ia mempelajari bagaimana cara memotret produk dan bagaimana strategi pemasaran produk secara online.
-                        p Kini, Yusmarni 
-                            b #JadiBisa 
-                            | memiliki penghasilan tambahan dari jualan online.
-
-            .col-lg-4.col-md-6.mb-4
-                .testimony-card.p-3.rounded-3.bg-white
-                    .testimony-header.d-flex.justify-content-between.align-items-center
-                    
-                        div.d-flex.align-items-center 
-                            div.pe-2 
-                                .testimony-img
-                                    img(src="../img/alumni-muhammad.webp", alt="Muhammad")
-                                    //- div.testimony-initial.d-flex.align-items-center.h-100
-                                    //-     span.w-100.text-center.fs-5.color-primary M
-                                
-                            div 
-                                h6.m-0 Muhammad
-                                div.fs-7.text-secondary Desa Sukamuncul, Kec. Sukamaju
-                                div.fs-7.text-secondary Gelombang 50 - 2023
-
-                        span.fs-1
-                            i.bi.bi-quote
-
-                    .testimony-body.mt-3 
-                        p Saat ini Muhammad berprofesi sebagai perawat.
-                        p Di Prakerja, ia belajar mengenai penjualan melalui Tiktok dengan tujuan meningkatkan keterampilannya dalam berbisnis.
-                        p Kedepannya, Muhammad berencana memiliki usaha online sendiri.
-
-            .col-lg-4.col-md-6.mb-4
-                .testimony-card.p-3.rounded-3.bg-white
-                    .testimony-header.d-flex.justify-content-between.align-items-center
-                    
-                        div.d-flex.align-items-center 
-                            div.pe-2 
-                                .testimony-img
-                                    //- img(src="img/img-testimony-sabrina.webp", alt="Sabrina Lutfiani")
-                                    div.testimony-initial.d-flex.align-items-center.h-100
-                                        span.w-100.text-center.fs-5.color-primary H
-                                
-                            div 
-                                h6.m-0 Helmi Suardi
-                                div.fs-7.text-secondary Desa Sukamuncul, Kec. Sukamaju
-                                div.fs-7.text-secondary Gelombang 50 - 2023
-
-                        span.fs-1
-                            i.bi.bi-quote
-
-                    .testimony-body.mt-3 
-                        p Sebelumnya, Helmi merupakan seorang fresh graduate S2 Developmental and Educational Psychology dari Huazhong University of Science and Technology, China yang memiliki hobi fotografi.
-                        p Di Prakerja, ia mempelajari teknik pencahayaan, komposisi dasar fotografi dan bagaimana cara menjadi fotografer profesional.
-                        p Kini, Hemi 
-                            b #JadiBisa 
-                            | percaya diri dengan memiliki 4 profesi sekaligus yaitu dosen, petani sawit, fotografer dan penerjemah bahasa mandarin.
-            
             .col-lg-4.col-md-6.mb-4
                 .testimony-card.p-3.rounded-3.bg-white
                     .testimony-header.d-flex.justify-content-between.align-items-center
@@ -191,6 +99,6 @@ section.section-testimony.py-3.py-lg-5
                         p.skeleton-box.rounded-pill(style='width:60%;height: 12px;')
 
 
-        .row.d-flex.justify-content-center
+        //- .row.d-flex.justify-content-center
             button.btn.btn-outline-primary.btn-lg.w-auto Lihat Lebih Banyak
 
