update map format to hide the label when overlap

--- a/pug/kabupaten/section_content_hero.pug
+++ b/pug/kabupaten/section_content_hero.pug
@@ -8,7 +8,7 @@ section.section-course
                 div
                     .regency-name.h6 Kabupaten
                     h1.city-name.text-capitalize Memuat Data 
-                    .province-name.h6.text-secondary Memuat Data
+                    b.province-name.h5.text-secondary Memuat Data
 
                 hr
 
@@ -42,7 +42,7 @@ section.section-course
                     span#total-recipient.fw-bold 0 
                     |  orang dari 
                     span#total-workers.fw-bold 0 
-                    |  angkatan kerja di Provinsi 
+                    |  angkatan kerja di  
                     span.province-name.text-capitalize.fw-bold ~  
                     |  pernah mengikuti pelatihan di Prakerja. Angka jumlah Angkatan Kerja diambil menurut data <i>BPS per Februari 2024</i>.
 
