update city name for regency

--- a/pug/kabupaten/section_content_hero.pug
+++ b/pug/kabupaten/section_content_hero.pug
@@ -43,7 +43,7 @@ section.section-course
                     |  orang dari 
                     span#total-workers.fw-bold 0 
                     |  angkatan kerja di  
-                    span.province-name.text-capitalize.fw-bold ~  
+                    span.city-name.text-capitalize.fw-bold ~  
                     |  pernah mengikuti pelatihan di Prakerja. Angka jumlah Angkatan Kerja diambil menurut data <i>BPS per Februari 2024</i>.
 
             
